style: 홈 페이지 배경 이미지 URL을 환경변수 사용으로 수정하여 배포 환경에 맞게 조정

--- a/frontend/src/pages/Home-new.css
+++ b/frontend/src/pages/Home-new.css
@@ -11,7 +11,7 @@
   position: relative;
   text-align: center;
   padding: 120px 20px;
-  background: url('/teamcover.jpg') center/cover no-repeat;
+  background: url('%PUBLIC_URL%/teamcover.jpg') center/cover no-repeat;
   color: white;
   border-radius: 20px;
   margin-bottom: 60px;
